<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">
    <TextView
            android:id="@+id/lblSurname"
            android:text="@string/form_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="24sp"/>
    <EditText
            android:layout_height="47dp"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/entSurname"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="24sp" app:layout_constraintTop_toBottomOf="@+id/lblSurname" android:layout_width="371dp"/>
    <TextView
            android:id="@+id/lblName"
            android:text="@string/form_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/entSurname"/>
    <EditText
            android:layout_height="47dp"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/entName"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="24sp" app:layout_constraintTop_toBottomOf="@+id/lblName" android:layout_width="371dp"/>
    <TextView
            android:id="@+id/lblCity"
            android:text="@string/form_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/entName"/>
    <EditText
            android:layout_height="47dp"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/entCity"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="24sp" app:layout_constraintTop_toBottomOf="@+id/lblCity" android:layout_width="371dp"/>
    <TextView
            android:id="@+id/lblBirth"
            android:text="@string/form_bornDate"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/entCity"
            />
    <EditText
            android:layout_height="47dp"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/entBornDate"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/lblBirth"
            android:layout_width="371dp"/>
    <CheckBox
            android:id="@+id/cbxAcptRules"
            android:text="@string/form_acptRules"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/lblBirth"
            android:layout_marginTop="92dp" android:textSize="18sp"/>
    <CheckBox
            android:id="@+id/cbxAcptGdpr"
            android:text="@string/form_acptGdpr"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/cbxAcptRules"
            android:textSize="18sp"/>
    <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="311dp"
            android:layout_height="32dp"
            app:layout_constraintTop_toBottomOf="@+id/lblBirth" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>